added dashboard image

--- a/GSMS.csproj
+++ b/GSMS.csproj
@@ -235,6 +235,7 @@
     <Content Include="Resources\69524.png" />
     <None Include="Resources\695241.png" />
     <Content Include="Resources\Account_Logo.jpg" />
+    <None Include="Resources\Dashboard_GSMS.gif" />
     <Content Include="Resources\Error.gif" />
     <Content Include="Resources\Error_img.gif" />
     <Content Include="Resources\Error_img1.gif" />
