--- a/GSMS.csproj
+++ b/GSMS.csproj
@@ -236,6 +236,7 @@
     <None Include="Resources\695241.png" />
     <Content Include="Resources\Account_Logo.jpg" />
     <None Include="Resources\Dashboard_GSMS.gif" />
+    <None Include="Resources\Close_Icon.png" />
     <Content Include="Resources\Error.gif" />
     <Content Include="Resources\Error_img.gif" />
     <Content Include="Resources\Error_img1.gif" />
